<resources>
    <string name="app_name">L3azhChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Sign In fragment-->
    <string name="username_label">Tài khoản</string>
    <string name="password_label">Mật Khẩu</string>
    <string name="role_label">Loại Tài khoản</string>
    <string name="signin_label">Đăng nhập</string>
    <string name="forgot_password_label"><u>Quên mật khẩu</u></string>
    <string name="ptit_label">PTIT</string>
    <string name="student_role_label">Sinh Viên</string>
    <string name="student_role_code_label">SV</string>
    <string name="teacher_role_label">Giảng Viên</string>
    <string name="teacher_role_code_label">GV</string>
    <string name="error_role_code_label">Không thể chọn role</string>
    <!--Student info fragment-->
    <string name="name_label_student_info_fragment">Họ và tên: </string>
    <string name="code_label_student_info_fragment">Mã: </string>
    <!--Student home fragment-->
    <string name="calendar_label">Thời khoá biểu</string>
    <string name="test_calendar_label">Lịch thi</string>
    <string name="point_student_label">Điểm</string>
    <string name="education_calendar_label">Chương trình \n đào tạo</string>
    <string name="education_fee_label">Học phí</string>
    <string name="health_declaration">Khai báo y tế</string>
    <!-- Student medical declaration-->
    <string name="fast_declaration_label">Khai báo nhanh</string>
    <string name="save_declaration_label">Lưu tờ khai</string>
    <string name="date_label_medical_declaration">Ngày</string>
    <string name="time_label_medical_declaration">Giờ</string>
    <string name="health_status_label">Tình trạng sức khoẻ</string>
    <string name="start_destination_label">Nơi đi</string>
    <string name="end_destination_label">Nơi đến</string>
    <string name="normal_heal_status_label">Bình thường</string>
    <string name="bad_heal_status_label">Sốt, ho, khó thở</string>
    <!-- Student ctdt -->
    <string name="name_subject_label">Tên môn học: </string>
    <string name="code_subject_label">Mã môn học: </string>
    <string name="number_of_credits_label">Số tín chỉ: </string>
    <!-- Student timeTable-->
    <string name="semester_school_year_label">Học kì năm học</string>
    <string name="list_week_number_label">Danh sách tuần</string>
    <string name="code_subject_time_table_label">Mã môn học: \u0020</string>
    <string name="day_number_in_week_label">Số thứ trong tuần: \u0020</string>
    <string name="class_room_time_table_label">Phòng học: \u0020</string>
    <string name="session_begin_time_table_label">Tiết bắt đầu: \u0020</string>
    <string name="time_begin_time_table_label">Giờ bắt đầu: \u0020</string>
    <!-- Student exam and point-->
    <string name="code_subject_exam_point_label">Mã môn học: \u0020</string>
    <string name="name_subject_exam_point_label">Tên môn học: \u0020</string>
    <string name="exam_day_exam_point_label">Ngày thi: \u0020</string>
    <string name="exam_room_exam_point_label">Phòng thi: \u0020</string>
    <string name="session_begin_exam_point_label">Tiết bắt đầu: \u0020</string>
    <string name="time_begin_exam_point_label">Giờ bắt đầu: \u0020</string>
    <string name="minus_number_exam_point_label">Số phút: \u0020</string>

    <string name="point_system_cc_exam_point_label">Hệ điểm CC: \u0020</string>
    <string name="point_system_se_exam_point_label">Hệ điểm SE: \u0020</string>
    <string name="point_system_kt_exam_point_label">Hệ điểm KT: \u0020</string>
    <string name="point_system_th_exam_point_label">Hệ điểm TH: \u0020</string>
    <string name="point_system_thi_exam_point_label">Hệ điểm Thi: \u0020</string>

    <string name="point_cc_exam_point_label">Điểm CC: \u0020</string>
    <string name="point_se_exam_point_label">Điểm SE: \u0020</string>
    <string name="point_kt_exam_point_label">Điểm KT: \u0020</string>
    <string name="point_th_exam_point_label">Điểm TH: \u0020</string>
    <string name="point_thi_exam_point_label">Điểm Thi: \u0020</string>
    <!--Label for navigaiton-->
    <string name="home_label_menu_bottom_nav">Trang chủ</string>
    <string name="info_label_menu_drawer_nav">Thông tin cá nhân</string>
    <string name="logout_label">Đăng xuất</string>
    <!-- Error log label -->
    <string name="get_role_from_sharePref_null">Role get from SharePreference is null</string>
    <string name="invalid_role_from_sharePref">Role get from SharePreference is invalid</string>
    <!-- Debug log label -->
    <string name="empty_token_from_sharePref">Empty token get from SharePreference</string>
</resources>