<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.student.medical_declaration_fragment.CreateNewMedicalDeclarationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fast_declaration_label"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_margin="15dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_health_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        app:hintTextColor="@android:color/holo_red_dark"
        app:startIconDrawable="@drawable/ic_baseline_health_and_safety_24"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/text_input_layout_color"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edit_text_health_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/health_status_label" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_start_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:hintTextColor="@android:color/holo_red_dark"
        app:startIconDrawable="@drawable/ic_baseline_directions_car_24"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/text_input_layout_color"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_start_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_destination_label" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_end_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:hintTextColor="@android:color/holo_red_dark"
        app:startIconDrawable="@drawable/ic_baseline_directions_car_24"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/text_input_layout_color"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_end_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_destination_label" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_health_declaration_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="48dp"
        app:cornerRadius="20dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/red_d20000"
        android:text="@string/save_declaration_label"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</LinearLayout>